--- a/src/templates/3_UZ_ChildDI_Staff_Registry_en.html
+++ b/src/templates/3_UZ_ChildDI_Staff_Registry_en.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Name of the department within the institution. 80. Not applicable</div>
+            <div>Name of the department within the institution. 80. Not applicable</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center gap-4">
                     <input type="text" id="j2" name="j2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -156,8 +156,8 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J3. Job class:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J3. Job class:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j3-1" type="radio" value="1" name="j3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j3-1" class="ms-2 text-sm text-gray-900">1. Executive / Management</label>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J4. Is there an approved job description available for this position?</div>
+            <div>J4. Is there an approved job description available for this position?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="j4-1" type="radio" value="1" name="j4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -207,8 +207,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J6. Level of qualification / education required</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J6. Level of qualification / education required</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j6-1" class="ms-2 text-sm text-gray-900">0. None</label>
@@ -234,14 +234,14 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>J7. Required level of experience (minimum number of years of work experience) for this position</div>
-            <div>
-                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            <div class="flex items-center gap-4">
+                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" />
                 years            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J8. Current status of the job:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J8. Current status of the job:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j8-1" type="radio" value="1" name="j8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j8-1" class="ms-2 text-sm text-gray-900">1. Permanent employment</label>
@@ -286,7 +286,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E3. Gender</div>
+            <div>E3. Gender</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e3-1" type="radio" value="1" name="e3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -300,8 +300,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E4. Education level</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>E4. Education level</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">0. None</label>
@@ -334,8 +334,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E6. Total number of years of experience in this area of work (including similar positions in other organizations)</div>
-            <div>
-                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> years            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> years            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -377,17 +377,18 @@
                     <input id="e8-7" type="radio" value="7" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e8-7" class="ms-2 text-sm text-gray-900">7. Service contract / Freelance</label>
                 </div>
-                <div class="flex flex-col gap-4">
-                    <div>8. Other, specify ……</div>
-                    <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div class="flex items-center">
+                    <input id="e8-8" type="radio" value="8" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e8-8" class="ms-2 text-sm text-gray-900">8. Other, specify ……</label>
                 </div>
+                <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E9. Position/Specialty level or rank</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>E9. Position/Specialty level or rank</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e9-1" type="radio" value="1" name="e9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">1. Higher category</label>
@@ -409,7 +410,7 @@
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E10. Is the employee directly involved in working with children?</div>
+            <div>E10. Is the employee directly involved in working with children?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e10-1" type="radio" value="1" name="e10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -423,7 +424,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E11. Does the employee work in night shifts?</div>
+            <div>E11. Does the employee work in night shifts?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e11-1" type="radio" value="1" name="e11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -437,7 +438,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E12. Does the employee work during weekends?</div>
+            <div>E12. Does the employee work during weekends?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e12-1" type="radio" value="1" name="e12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -451,7 +452,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E13. Have the employee undergone advanced training courses in their specialization in the last three years?</div>
+            <div>E13. Have the employee undergone advanced training courses in their specialization in the last three years?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e13-1" type="radio" value="1" name="e13" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -467,8 +468,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E14. What is the total number of paid calendar leave days the employee is entitled to?</div>
-            <div>
-                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> calendar days            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> calendar days            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -479,7 +480,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E16. In the last three years, have there been any complaints against the employees regarding misconducts, bad treatments or abuses against the children placed in the institution?</div>
+            <div>E16. In the last three years, have there been any complaints against the employees regarding misconducts, bad treatments or abuses against the children placed in the institution?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e16-1" type="radio" value="1" name="e16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -493,7 +494,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E17. In the last three years, have the employee been sanctioned for any misconduct, bad treatments or abuse against the children placed in the institution?</div>
+            <div>E17. In the last three years, have the employee been sanctioned for any misconduct, bad treatments or abuse against the children placed in the institution?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e17-1" type="radio" value="1" name="e17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -507,7 +508,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E18. Is the staff eligible for retirement within the next three years due to reaching pension age or already being of pension age?</div>
+            <div>E18. Is the staff eligible for retirement within the next three years due to reaching pension age or already being of pension age?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e18-1" type="radio" value="1" name="e18" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
