--- a/src/templates/3_UZ_ChildDI_Staff_Registry_ru.html
+++ b/src/templates/3_UZ_ChildDI_Staff_Registry_ru.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Название отдела в учреждении. 80. Неприменимо</div>
+            <div>Название отдела в учреждении. 80. Неприменимо</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center gap-4">
                     <input type="text" id="j2" name="j2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -156,8 +156,8 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J3. Класс работы:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J3. Класс работы:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j3-1" type="radio" value="1" name="j3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j3-1" class="ms-2 text-sm text-gray-900">1. Руководитель/Менеджмент</label>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J4. Имеется ли утвержденная должностная инструкция для данной должности?</div>
+            <div>J4. Имеется ли утвержденная должностная инструкция для данной должности?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="j4-1" type="radio" value="1" name="j4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -207,8 +207,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J6. Требуемый уровень квалификации/образования</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J6. Требуемый уровень квалификации/образования</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Нет</label>
@@ -234,14 +234,14 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>J7. Требуемый уровень опыта (минимальное количество лет опыта работы) для данной должности</div>
-            <div>
-                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            <div class="flex items-center gap-4">
+                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" />
                 годы            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J8. Текущий статус должности:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J8. Текущий статус должности:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j8-1" type="radio" value="1" name="j8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j8-1" class="ms-2 text-sm text-gray-900">1. Постоянная занятость</label>
@@ -286,7 +286,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е3. Пол</div>
+            <div>Е3. Пол</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e3-1" type="radio" value="1" name="e3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -300,8 +300,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е4. Уровень образования</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>Е4. Уровень образования</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Нет</label>
@@ -334,8 +334,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Е6. Общее количество лет соответствующего опыта работы в этой области (включая подобные должности в других организациях)</div>
-            <div>
-                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> годы            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> годы            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -377,17 +377,18 @@
                     <input id="e8-7" type="radio" value="7" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e8-7" class="ms-2 text-sm text-gray-900">7. Договор оказания услуг / Внештатный сотрудник</label>
                 </div>
-                <div class="flex flex-col gap-4">
-                    <div>8. Другое, укажите……</div>
-                    <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div class="flex items-center">
+                    <input id="e8-8" type="radio" value="8" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e8-8" class="ms-2 text-sm text-gray-900">8. Другое, укажите……</label>
                 </div>
+                <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е9. Уровень квалификации/ранг для данной должности </div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>Е9. Уровень квалификации/ранг для данной должности </div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e9-1" type="radio" value="1" name="e9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">1. Высшей категории</label>
@@ -409,7 +410,7 @@
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E10. Занимается ли сотрудник непосредственно с детьми?</div>
+            <div>E10. Занимается ли сотрудник непосредственно с детьми?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e10-1" type="radio" value="1" name="e10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -423,7 +424,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е11. Работает ли сотрудник в ночную смену?</div>
+            <div>Е11. Работает ли сотрудник в ночную смену?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e11-1" type="radio" value="1" name="e11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -437,7 +438,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е12. Работает ли сотрудник в выходные дни?</div>
+            <div>Е12. Работает ли сотрудник в выходные дни?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e12-1" type="radio" value="1" name="e12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -451,7 +452,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е13. Проходил ли сотрудник курсы повышения квалификации по своей специализации за последние три года?</div>
+            <div>Е13. Проходил ли сотрудник курсы повышения квалификации по своей специализации за последние три года?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e13-1" type="radio" value="1" name="e13" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -467,8 +468,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Е14. На какое общее количество календарных дней оплачиваемого отпуска имеет право работник?</div>
-            <div>
-                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> календарные дни            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> календарные дни            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -479,7 +480,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е16. Поступали ли за последние три года жалобы на сотрудников по поводу неправомерного поведения, плохого обращения или жестокого обращения с детьми, помещенными в учреждение?</div>
+            <div>Е16. Поступали ли за последние три года жалобы на сотрудников по поводу неправомерного поведения, плохого обращения или жестокого обращения с детьми, помещенными в учреждение?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e16-1" type="radio" value="1" name="e16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -493,7 +494,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е17. Применялись ли к работнику за последние три года санкции за какое-либо неправомерное поведение, плохое обращение или жестокое обращение с детьми, помещенными в учреждение?</div>
+            <div>Е17. Применялись ли к работнику за последние три года санкции за какое-либо неправомерное поведение, плохое обращение или жестокое обращение с детьми, помещенными в учреждение?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e17-1" type="radio" value="1" name="e17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -507,7 +508,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Е18. Имеет ли персонал право в течение следующих трех лет выйти на пенсию по возрасту, или является ли сотрудник пенсионного возраста?</div>
+            <div>Е18. Имеет ли персонал право в течение следующих трех лет выйти на пенсию по возрасту, или является ли сотрудник пенсионного возраста?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e18-1" type="radio" value="1" name="e18" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
