--- a/src/templates/3_UZ_ChildDI_Staff_Registry_uz.html
+++ b/src/templates/3_UZ_ChildDI_Staff_Registry_uz.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">Muassasa tarkibidagi bo&#39;lim nomi. 80. Qo&#39;llanilmaydi</div>
+            <div>Muassasa tarkibidagi bo&#39;lim nomi. 80. Qo&#39;llanilmaydi</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center gap-4">
                     <input type="text" id="j2" name="j2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -156,8 +156,8 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J3. Ish sinfi:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J3. Ish sinfi:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j3-1" type="radio" value="1" name="j3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j3-1" class="ms-2 text-sm text-gray-900">1. Rahbar / Boshqaruv</label>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J4. Ushbu lavozim uchun tasdiqlangan lavozim yo&#39;riqnomasi mavjudmi?</div>
+            <div>J4. Ushbu lavozim uchun tasdiqlangan lavozim yo&#39;riqnomasi mavjudmi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="j4-1" type="radio" value="1" name="j4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -207,8 +207,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J6. Talab qilinadigan malaka / ta&#39;lim darajasi</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J6. Talab qilinadigan malaka / ta&#39;lim darajasi</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Yo&#39;q</label>
@@ -234,14 +234,14 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>J7. Ushbu lavozim uchun talab qilinayotgan tajriba darajasi (ish tajribasi yillarining minimal soni)</div>
-            <div>
-                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            <div class="flex items-center gap-4">
+                <input type="text" id="j7" name="j7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" />
                 yillar            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">J8. Bandlikning xozirgi xolati:</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>J8. Bandlikning xozirgi xolati:</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j8-1" type="radio" value="1" name="j8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="j8-1" class="ms-2 text-sm text-gray-900">1. Doimiy bandlik</label>
@@ -286,7 +286,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E3. Jins</div>
+            <div>E3. Jins</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e3-1" type="radio" value="1" name="e3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -300,8 +300,8 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E4. Ma&#39;lumoti</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>E4. Ma&#39;lumoti</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Yo&#39;q</label>
@@ -334,8 +334,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E6. Boshqa tashkilotlarda ushbu yoki shunga o&#39;xshash lavozimlarda faoliyat yuritgan ish tajribasi yillarining umumiy soni</div>
-            <div>
-                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> yillar            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e6" name="e6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> yillar            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -377,17 +377,18 @@
                     <input id="e8-7" type="radio" value="7" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e8-7" class="ms-2 text-sm text-gray-900">7. Xizmat ko&#39;rsatish shartnomasi / Frilanser</label>
                 </div>
-                <div class="flex flex-col gap-4">
-                    <div>8. Boshqa, belgilang ……</div>
-                    <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div class="flex items-center">
+                    <input id="e8-8" type="radio" value="8" name="e8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e8-8" class="ms-2 text-sm text-gray-900">8. Boshqa, belgilang ……</label>
                 </div>
+                <input type="text" id="e8_other" name="e8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E9. Ushbu lavozim uchun talab etilayotgan malaka/toifa (kategoriya) darajasi</div>
-            <div class="col-span-1 flex items-center gap-4">
+            <div>E9. Ushbu lavozim uchun talab etilayotgan malaka/toifa (kategoriya) darajasi</div>
+            <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e9-1" type="radio" value="1" name="e9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="e4-1" class="ms-2 text-sm text-gray-900">1. Oliy</label>
@@ -409,7 +410,7 @@
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E10. Xodim bolalar bilan ishlashda bevosita ishtirok etadimi?</div>
+            <div>E10. Xodim bolalar bilan ishlashda bevosita ishtirok etadimi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e10-1" type="radio" value="1" name="e10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -423,7 +424,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E11. Xodim tungi smenada ishlaydimi?</div>
+            <div>E11. Xodim tungi smenada ishlaydimi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e11-1" type="radio" value="1" name="e11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -437,7 +438,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E12. Xodim dam olish kunlari ishlaydimi?</div>
+            <div>E12. Xodim dam olish kunlari ishlaydimi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e12-1" type="radio" value="1" name="e12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -451,7 +452,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E13. So&#39;nggi uch yil ichida xodim o&#39;z ixtisosligi bo&#39;yicha malaka oshirish kurslarida o&#39;qidimi?</div>
+            <div>E13. So&#39;nggi uch yil ichida xodim o&#39;z ixtisosligi bo&#39;yicha malaka oshirish kurslarida o&#39;qidimi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e13-1" type="radio" value="1" name="e13" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -467,8 +468,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E14. Xodimga ish haqi to&#39;lanadigan ta&#39;til (taqvim bo&#39;yicha) umumiy soni qancha?</div>
-            <div>
-                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> taqvim kunlar            </div>
+            <div class="flex items-center gap-4">
+                <input type="text" id="e14" name="e14" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 disabled:bg-gray-100" /> taqvim kunlar            </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -479,7 +480,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E16. So&#39;nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan noto&#39;g&#39;ri xatti-harakatlar, yomon muomala yoki suiiste&#39;molliklar bo&#39;yicha xodimlar ustidan  shikoyatlar bo&#39;lganmi?</div>
+            <div>E16. So&#39;nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan noto&#39;g&#39;ri xatti-harakatlar, yomon muomala yoki suiiste&#39;molliklar bo&#39;yicha xodimlar ustidan  shikoyatlar bo&#39;lganmi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e16-1" type="radio" value="1" name="e16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -493,7 +494,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E17. So&#39;nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan biror bir noto&#39;g&#39;ri xatti-harakatlar, yomon muomila yoki zo&#39;ravonlik uchun xodimga jazo tayinlanganmi?</div>
+            <div>E17. So&#39;nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan biror bir noto&#39;g&#39;ri xatti-harakatlar, yomon muomila yoki zo&#39;ravonlik uchun xodimga jazo tayinlanganmi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e17-1" type="radio" value="1" name="e17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -507,7 +508,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-3">E18. Xodim keyingi uch yil ichida yoshga doir nafaqaga chiqish huquqiga egami yoki xodim pensionermi?</div>
+            <div>E18. Xodim keyingi uch yil ichida yoshga doir nafaqaga chiqish huquqiga egami yoki xodim pensionermi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="e18-1" type="radio" value="1" name="e18" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
